tests/baselines/reference/multiLinePropertyAccessAndArrowFunctionIndent1.errors.txt
tests/cases/compiler/multiLinePropertyAccessAndArrowFunctionIndent1.ts(1,1): error TS1108: A 'return' statement can only be used within a function body.
tests/cases/compiler/multiLinePropertyAccessAndArrowFunctionIndent1.ts(1,18): error TS2304: Cannot find name 'role'.
tests/cases/compiler/multiLinePropertyAccessAndArrowFunctionIndent1.ts(2,18): error TS2304: Cannot find name 'Role'.
tests/cases/compiler/multiLinePropertyAccessAndArrowFunctionIndent1.ts(4,26): error TS2503: Cannot find namespace 'ng'.


==== tests/cases/compiler/multiLinePropertyAccessAndArrowFunctionIndent1.ts (4 errors) ====
    return this.edit(role)
    ~~~~~~
!!! error TS1108: A 'return' statement can only be used within a function body.
                     ~~~~
!!! error TS2304: Cannot find name 'role'.
        .then((role: Role) =>
                     ~~~~
!!! error TS2304: Cannot find name 'Role'.
            this.roleService.add(role)
                .then((data: ng.IHttpPromiseCallbackArg<Role>) => data.data));
                             ~~
!!! error TS2503: Cannot find namespace 'ng'.
    